--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,18 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Offstrayer.TheEndComesTomorrow">The End Comes Tomorrow</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ahmad4maylod.cq">Circle Quest: Pofo Game</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.anogames.WordTowerPremiumPuzzle">Word Tower - Premium Puzzle</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.artifact.uforpgvip">[VIP]UFO DUDE RPG : idle wars</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.devvisiongames.dglandlight.survival">Dead God Land - Light Survival</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.divmob.epicheroeswar.en.freemium">EHW Premium & stick fight</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.sdefence">Final Castle Defence:Idle RPG</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ibuzz.apk.puzzle4kids82">Puzzle for kids - Animal games</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Heroes Legend - Epic Fantasy</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.shadow.survival.rogue.action.shooter.game.premium">Shadow Survival: Offline Games</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush">Words Search - Word Puzzles</a></div>
+        <p>No free games available today.</p>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
