--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,7 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://store.steampowered.com/app/282800/100_Orange_Juice/?snr=1_7_7_2300_150_1">100% Orange Juice</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/1510580/Toy_Tinker_Simulator/?snr=1_7_7_2300_150_1">Toy Tinker Simulator</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/2952470/Rat_Quest/?snr=1_7_7_2300_150_1">Rat Quest</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
