--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,7 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/jotunnslayer-hordes-of-hel-3579b3">Jotunnslayer: Hordes of Hel</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/eternights-c2fbca">Eternights</a></div>
         <div class="game-item"><a href="https://store.epicgames.com/en-US/p/fortnite--hollypaw-wrap">Claim</a></div>
         <div class="game-item"><a href="https://store.epicgames.com/en-US/p/fall-guys--fashionably-frosty">Claim</a></div>
         <div class="game-item"><a href="https://store.epicgames.com/en-US/p/rocket-league--tritrim-crimson-forest-green-wheels">Claim</a></div>
