--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -19,8 +19,8 @@
     <div class="game-container">
         <div class="game-item"><a href="https://store.steampowered.com/app/282800/100_Orange_Juice/?snr=1_7_7_2300_150_1">100% Orange Juice</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/2068520/Banana_Hell_Mountain_of_Madness/?snr=1_7_7_2300_150_1">Banana Hell: Mountain of Madness</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/460960/The_Deed_Dynasty/?snr=1_7_7_2300_150_1">The Deed: Dynasty</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/2952470/Rat_Quest/?snr=1_7_7_2300_150_1">Rat Quest</a></div>
-        <div class="game-item"><a href="https://store.steampowered.com/app/1510580/Toy_Tinker_Simulator/?snr=1_7_7_2300_150_1">Toy Tinker Simulator</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/2547140/Undercroft_warriors/?snr=1_7_7_2300_150_1">Undercroft warriors</a></div>
     </div>
 <footer>
