--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,8 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/fallout-gog/dp/amzn1.pg.item.448a2032-28d0-4ed0-815e-0b3196318919?g=s&ingress=amzn&ref_=SM_Fallout_S02_FGWP_CRWN">Fallout</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/fallout-2-gog/dp/amzn1.pg.item.adeb6f91-fd33-4d7b-b0bc-dd1d7f64aac0?g=s&ingress=amzn&ref_=SM_Fallout2_S02_FGWP_CRWN">Fallout 2</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/bo-path-of-the-teal-lotus-gog/dp/amzn1.pg.item.467b84c8-afa8-432e-a8e9-c69ead91d153?g=s&ingress=amzn&ref_=SM_BoPathoftheTealLotus_S01_FGWP_CRWN">Bō: Path of the Teal Lotus</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-three-gog/dp/amzn1.pg.item.7ddccc6b-b676-4754-97ac-d5b862e5e019?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionThree_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection Three</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-2-gog/dp/amzn1.pg.item.bef0b168-84d5-4915-ba36-5a99cb3c9a4b?g=s&ingress=amzn&ref_=SM_Gunslugs2_S01_FGWP_CRWN">Gunslugs 2</a></div>
