--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,7 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.avalar.athree.epl.gp">Avalar: Shadow War Premium</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.city.premium">Merge City Premium -Home decor</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
