--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/deus-ex-mankind-divided-epic/dp/amzn1.pg.item.1b0307e0-f4a9-435b-bbd2-aa6fa8977c66?g=s&ingress=amzn&ref_=SM_DeusExMankindDivided_S02_FGWP_CRWN">Deus Ex: Mankind Divided</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/living-legends-the-crystal-tear-ce-aga/dp/amzn1.pg.item.2ba68f14-f393-4688-98ba-426f2b07a8f0?g=s&ingress=amzn&ref_=SM_LivingLegendsTheCrystalTearCE_S01_FGWP_CRWN">Living Legends: The Crystal Tear - CE</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/dreamscaper-epic/dp/amzn1.pg.item.faf72ff9-c6ee-46bc-9832-c0627bd4f4db?g=s&ingress=amzn&ref_=SM_Dreamscaper_S01_FGWP_CRWN">Dreamscaper</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/fallout-gog/dp/amzn1.pg.item.448a2032-28d0-4ed0-815e-0b3196318919?g=s&ingress=amzn&ref_=SM_Fallout_S02_FGWP_CRWN">Fallout</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/fallout-2-gog/dp/amzn1.pg.item.adeb6f91-fd33-4d7b-b0bc-dd1d7f64aac0?g=s&ingress=amzn&ref_=SM_Fallout2_S02_FGWP_CRWN">Fallout 2</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/bo-path-of-the-teal-lotus-gog/dp/amzn1.pg.item.467b84c8-afa8-432e-a8e9-c69ead91d153?g=s&ingress=amzn&ref_=SM_BoPathoftheTealLotus_S01_FGWP_CRWN">Bō: Path of the Teal Lotus</a></div>
@@ -27,7 +30,6 @@
         <div class="game-item"><a href="https://gaming.amazon.com/gylt-aga/dp/amzn1.pg.item.4352c9d6-2081-468b-942e-6eb58e7b3eab?g=s&ingress=amzn&ref_=SM_GYLT_S01_FGWP_CRWN">GYLT</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-one-gog/dp/amzn1.pg.item.40b12069-c053-47a4-b4d4-b0c7cf016c13?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionOne_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection One</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-gog/dp/amzn1.pg.item.f7fe7089-eca7-4ebf-9ab2-45fd60f026ac?g=s&ingress=amzn&ref_=SM_Gunslugs_S01_FGWP_CRWN">Gunslugs</a></div>
-        <div class="game-item"><a href="https://gaming.amazon.com/big-adventure-trip-to-europe-6-ce-legacy/dp/amzn1.pg.item.5823fdb8-2192-45f8-90af-ef446602b3b6?g=s&ingress=amzn&ref_=SM_BigAdventureTriptoEurope6CE_S01_FGWP_CRWN">Big Adventure: Trip to Europe 6 - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-two-gog/dp/amzn1.pg.item.4568db25-39b6-466b-8e2b-e01975fd2c98?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionTwo_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection Two</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/christmas-adventure-candy-storm-legacy/dp/amzn1.pg.item.ca232c9b-7cf7-4717-93b9-23fb1ad3edec?g=s&ingress=amzn&ref_=SM_ChristmasAdventureCandyStorm_S01_FGWP_CRWN">Christmas Adventure: Candy Storm</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/dark-city-kyiv-ce-aga/dp/amzn1.pg.item.db91c852-8643-4a44-a5e1-20ab4092e317?g=s&ingress=amzn&ref_=SM_DarkCityKyivCE_S01_FGWP_CRWN">Dark City: Kyiv - CE</a></div>
