--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -21,9 +21,18 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.cooking.love">Cooking Kawaii - cooking games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.cafe.premium">Merge Cafe Premium -Home Decor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.city.premium">Merge City Premium -Home decor</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.spellingmaster">Spelling Master - Quiz Games</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.triviamaster">Trivia Master - Quiz Games</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.kingdom.idle.defense.td.archer.game.premium">Empire Kingdom: Idle Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fori.slimelegends">Slime Legends - Survivor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gamefirst.savetheearth">Eco inc. Save the Earth</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.asmg">Pixel Knights VIP</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.livezen.BurningSky.vip">Burning Sky VIP</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.memof.at">Memory Game: Fruit</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.nomadgames.dungeonmaster">Everybody's RPG: Reboot</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.survivalpro">Live or Die: Survival Pro</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.GrowHerosVIP">Grow Heroes VIP : Idle Rpg</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za3p">Zombie Age 3 Premium: Survival</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
