--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://store.steampowered.com/app/3180310/Billies_Wheelie/?snr=1_7_7_2300_150_1">Billie's Wheelie</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/3662830/Train_Sim_World_6_Spirit_of_Steam_Liverpool_Lime_Street__Crewe_Route_AddOn/?snr=1_7_7_2300_150_1">Train Sim World® 6: Spirit of Steam: Liverpool Lime Street - Crewe Route Add-On</a></div>
     </div>
 <footer>
