--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -27,6 +27,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fori.slimelegends">Slime Legends - Survivor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gamefirst.savetheearth">Eco inc. Save the Earth</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.asmg">Pixel Knights VIP</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gemjam.sword.fight.pro.medieval.knight.fighter.duel.fighting.pvp.arena.rpg.games">Sword Fight: Knight Arena Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.memof.at">Memory Game: Fruit</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.nomadgames.dungeonmaster">Everybody's RPG: Reboot</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.survivalpro">Live or Die: Survival Pro</a></div>
