--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -18,15 +18,13 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.evertale">Evertale</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.SudokuMasterPremiumOffline">Sudoku Master Premium: Offline</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eapublishing.dhsw.paid">Shadow Hunter: Offline Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.spellingmaster">Spelling Master - Quiz Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.triviamaster">Trivia Master - Quiz Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate104p">Brain Game - Boymate10 4P</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.memof.at">Memory Game: Fruit</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.nomadgames.dungeonmaster">Everybody's RPG: Reboot</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.survivalpro">Live or Die: Survival Pro</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za3p">Zombie Age 3 Premium: Survival</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za2p">Zombie Age 2 Premium: Shooter</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.planets.ark.r">Our Planets Ark - ShipBuilding</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.tokyodebunkerpremium">Tokyo Debunker: Urban Legends</a></div>
     </div>
 <footer>
